k8s-rpi-apps-tekton-pipelines-k/tekton-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
  labels:
    app.kubernetes.io/instance: tekton-pipelines
    app.kubernetes.io/part-of: tekton-pipelines
    kubernetes.io/metadata.name: tekton-pipelines
    pod-security.kubernetes.io/enforce: baseline
